pages/LadingPage/components/Header/styles.module.scss
.header{

    background: var(--blue-gray-900);

    height: 80px;
    width: 100%;

    display: flex;
    align-items: center;
    justify-content: space-between;

    color: #fff;

    position: fixed;
    top: 0;

    z-index: 100;

    padding: 0.5rem;

    box-shadow: 0px -15px 40px var(--purple-100);

    .container{

        display: flex;
        justify-content: space-between;

        align-items: center;

        height: 100%;
        width: 100%;

        max-width: 1120px;

        margin: 0 auto;

        img{
            width: 60px;
            height: 60px;
        }
    
        .hamburguer{
            font-size: 2rem;
        }
    
        ul{
            display: flex;
            align-items: center;
            justify-content: center;
            flex-direction: column;
            gap: 1rem;
    
            height: 100vh;
            width: 100vw;
    
            position: absolute;
            top: 0;
            left: 0;
    
            background: var(--blue-gray-900);
    
            transition: opacity .3s ease-in-out;
    
            &.closed{
                visibility: hidden;
    
                z-index: -1;
                opacity: 0;
            }
    
            &.opened{
                visibility: visible;
                opacity: 1;
    
                .close{
                    top: 1.5rem;
                }
            }
    
            .close{
                position: absolute;
                right: 1.5rem;
                top: -5rem;
                
                font-size: 2.5rem;
    
                color: var(--purple-100);
    
                transition: top .3s ease-in-out;
            }
    
            li{
                display: flex;
                align-items: center;
                justify-content: center;
                text-transform: uppercase;
    
                a{
                    text-decoration: none;
                    color: #fff;
                    font-size: 1.8rem;
                    font-weight: normal;
                    padding: 0.5rem;
    
                    transition: color .3s ease-in-out;
    
                    &.active{
                        color: var(--purple-100);
                    }
                }
            }
        }
    }
}

// desktop
@media(min-width: 1024px){

    @keyframes width {
        0% {
            width: 0;
        }
        100% {
            width: 100%;
        }
        
    }

    .header{
        
        .container{

            img{
                height: 100%;
                width: auto;
            }

            .hamburguer{
                display: none;
            }
    
            ul{
                flex-direction: row;

                width: initial;

                &.closed{
                    visibility: visible;
                    opacity: 1;
                    z-index: 100;
                    position: initial;
    
                    flex-direction: row;
    
                    height: 100%;
    
                    li{
                        a{
                            font-size: 1rem;
                            
                            &:hover{
                                
                                color: var(--purple-100);
                                filter: brightness(1.2);
                            }

                            &.active{
                                
                                position: relative;
    
                                &::after{
                                    content: '';
                                    display: block;
                                    width: 100%;
                                    height: 1px;
                                    background: var(--purple-100);
                                    margin-top: 1rem;
    
                                    position: absolute;
    
                                    bottom: 0;
    
                                    left: 0;
    
                                    animation: width .1s ease-in-out;
    
                                    transition: opacity .3s ease-in-out;
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}

